# langbridge

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish-docker-images.yml  publish-runtime-packages.yml
alembic/: env.py  script.py.mako
alembic/versions/: 4c8a6b9d12ef_add_dataset_lineage_and_revision_metadata.py  7b9f6d6f4c21_add_dataset_storage_uri.py  8f3c1b0e4c2d_add_connector_sync_state_table.py  9c4e2a1d7f0b_runtime_metadata_v1.py  b7e1c2a4d9f0_add_connector_is_managed.py  c1a7d9e4f2b3_add_dataset_execution_descriptor_fields.py  c31f2da9e4b2_add_sql_workbench_tables.py  d4b8e2f1c6a7_add_sql_workbench_mode_metadata.py  e6f9a1b2c3d4_add_dataset_sql_alias.py
apps/runtime_ui/: README.md  docker-compose.yml  package-lock.json  package.json
apps/runtime_ui_next/: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
client/: package-lock.json  package.json  vitest.config.ts
docker/: Dockerfile.runtime_ui
docs/: README.md  api.md  architecture.md  bi-studio.md  datasets.md  development.md  federated-query-engine.md  semantic-model.md
docs/architecture/: control-plane.md  dataset-federation-upgrade.md  deprecations.md  execution-plane.md  federated-query-engine.md  hybrid-deployment.md  overview.md  runtime-api-layering.md  runtime-boundary.md
docs/deployment/: hosted.md  hybrid.md  self-hosted.md
docs/development/: local-dev.md  worker-dev.md
docs/features/: agents.md  api-connectors.md  federation.md  local-llms.md  semantic.md  sql.md  structured-llm-outputs.md
examples/: .gitignore
examples/complex_runtime/: setup.py  (+3 more)
langbridge/: Dockerfile.worker  __init__.py  __main__.py  config.py  example.env  hosting.py  requirements-dev.txt  requirements-worker.txt  requirements.txt
langbridge-connectors/langbridge-connector-bigquery/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-bigquery/src/: config.py  connector.py
langbridge-connectors/langbridge-connector-mariadb/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-mariadb/src/: __init__.py  config.py  connector.py
langbridge-connectors/langbridge-connector-oracle/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-oracle/src/: __init__.py  config.py  connector.py
langbridge-connectors/langbridge-connector-redshift/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-redshift/src/: __init__.py  config.py  connector.py
langbridge-connectors/langbridge-connector-snowflake/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-snowflake/src/langbridge_connector_snowflake/: __init__.py  config.py  connector.py  metadata.py
langbridge-connectors/langbridge-connector-stripe/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-stripe/examples/: dataset_selection_examples.yaml
langbridge-connectors/langbridge-connector-stripe/src/langbridge_connector_stripe/: __init__.py  config.py  connector.py  examples.py  plugin.py
langbridge-connectors/langbridge-connector-stripe/src/langbridge_connector_stripe/manifests/: __init__.py  stripe.yaml
langbridge/apps/api/: pyproject.toml
langbridge/apps/api/langbridge_api/: error_responses.py  main.py
langbridge/apps/api/langbridge_api/ioc/: container.py
langbridge/apps/api/langbridge_api/middleware/: auth_middleware.py  error_middleware.py  uow_middleware.py
langbridge/apps/api/langbridge_api/routers/v1/: __init__.py  connectors.py  datasets.py  jobs.py  organizations.py  runtime_metadata.py  semantic_models.py  semantic_query.py  sql.py
langbridge/apps/api/langbridge_api/services/: connector_schema_service.py  connector_service.py  connector_sync_service.py  dashboard_service.py  dataset_service.py  environment_service.py  lineage_service.py  orchestrator_service.py  organization_service.py  runtime_metadata_service.py  sql_service.py  task_dispatch_service.py
langbridge/apps/api/langbridge_api/services/jobs/: __init__.py  agentic_semantic_model_job_request_service.py  connector_sync_job_request_service.py  dataset_job_request_service.py  job_service.py  sql_job_request_service.py
langbridge/apps/api/langbridge_api/services/message/: message_serivce.py
langbridge/apps/api/langbridge_api/services/semantic/: semantic_model_service.py  semantic_query_service.py
langbridge/apps/runtime_worker/: __init__.py  main.py  pyproject.toml
langbridge/apps/runtime_worker/broker/: __init__.py  customer_runtime.py
langbridge/apps/runtime_worker/handlers/: __init__.py  dispatcher.py
langbridge/apps/runtime_worker/handlers/jobs/: __init__.py  connector_sync_job_request_handler.py  job_event_emitter.py
langbridge/apps/runtime_worker/handlers/query/: __init__.py  dataset_job_request_handler.py  semantic_query_request_handler.py  sql_job_request_handler.py
langbridge/apps/runtime_worker/ioc/: __init__.py  container.py  dependency_resolver.py
langbridge/apps/worker/: pyproject.toml
langbridge/apps/worker/langbridge_worker/: connector_sync_runtime.py  dataset_execution.py  semantic_query_execution_service.py
langbridge/apps/worker/langbridge_worker/broker/: customer_runtime.py
langbridge/apps/worker/langbridge_worker/handlers/: dispatcher.py
langbridge/apps/worker/langbridge_worker/handlers/copilot/: copilot_dashboard_request_handler.py
langbridge/apps/worker/langbridge_worker/handlers/jobs/: __init__.py  agent_job_request_handler.py  agentic_semantic_model_job_request_handler.py  connector_sync_job_request_handler.py
langbridge/apps/worker/langbridge_worker/handlers/query/: __init__.py  dataset_job_request_handler.py  semantic_query_request_handler.py  sql_job_request_handler.py
langbridge/apps/worker/langbridge_worker/ioc/: container.py
langbridge/apps/worker/langbridge_worker/tools/: federated_query_tool.py
monitoring/: prometheus.yml
requirements/: dev.txt  runtime.txt
scripts/: build_runtime_packages.py  check_runtime_boundary.py  wrap_semantic_tables_into_datasets.py
tests/: README.md  conftest.py
(+935 files in other folders)
