[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langbridge-connector-mariadb"
version = "0.1.0"
description = "MariaDB connector for Langbridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["langbridge", "mariadb"]

[project.entry-points."langbridge.connectors"]
mariadb = "langbridge_connector_mariadb:get_connector_plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
