[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langbridge-connector-redshift"
version = "0.1.0"
description = "Redshift connector for Langbridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["langbridge", "psycopg2-binary"]

[project.entry-points."langbridge.connectors"]
redshift = "langbridge_connector_redshift:get_connector_plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
